--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "watch": "runwatch \"**/*.js\" -r \"npm test\""
   },
   "devDependencies": {
+    "request-json": "^0.6.1",
     "runwatch": "^0.1.3",
-    "tape": "^4.5.1"
+    "tape": "^4.6.2",
+    "tape-catch": "^1.0.6"
   },
   "dependencies": {
-    "openbci": "^1.3.2"
+    "jsonschema": "^1.1.0",
+    "openbci": "^1.3.2",
+    "restify": "^4.1.1"
   }
 }
