--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "watch": "runwatch \"**/*.js\" -r \"npm test\""
   },
   "devDependencies": {
+    "JSONStream": "^1.2.1",
     "request-json": "^0.6.1",
     "runwatch": "^0.1.3",
     "tape": "^4.6.2",
