--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "license": "BSD-3-Clause",
   "main": "src/index.js",
   "scripts": {
-    "test": "tape test/*.js",
+    "test": "tape test/index.js",
     "watch": "runwatch \"**/*.js\" -r \"npm test\""
   },
   "devDependencies": {
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "jsonschema": "^1.1.0",
+    "mkdir-p": "0.0.7",
     "openbci": "^1.3.2",
     "restify": "^4.1.1"
   }
