--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "license": "BSD-3-Clause",
   "main": "src/index.js",
   "scripts": {
-    "test": "tape test/index.js",
+    "test": "tape test/*.js",
     "watch": "runwatch \"**/*.js\" -r \"npm test\""
   },
   "devDependencies": {
-    "JSONStream": "^1.2.1",
     "request-json": "^0.6.1",
     "runwatch": "^0.1.3",
     "tape": "^4.6.2",
@@ -15,6 +14,7 @@
   },
   "dependencies": {
     "jsonschema": "^1.1.0",
+    "minimist": "^1.2.0",
     "mkdir-p": "0.0.7",
     "openbci": "^1.3.2",
     "restify": "^4.1.1"
