--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "license": "BSD-3-Clause",
   "main": "src/index.js",
   "scripts": {
-    "test": "tape test/index-test.js",
+    "test": "tape test/*.js",
     "watch": "runwatch \"**/*.js\" -r \"npm test\""
   },
   "devDependencies": {
